--- a/index (2).html
+++ b/index (2).html
@@ -69,9 +69,8 @@
 
     <section class="welcome">
       <div class="haro">
-        <img class="image-sidebar" src="undead esports.png" />
         <h1 class="text">W E L C O M E</h1>
-
+        <h1>Added text to test</h1>
         <p class="welcome-text">
           The oldest classical Greek and Latin writing had little or no space
           between words and could be written in boustrophedon (alternating
