Changes to hero section structure

--- a/index (2).html
+++ b/index (2).html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
       rel="stylesheet"
@@ -23,22 +23,22 @@
       src="https://kit.fontawesome.com/294f177ac8.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
       rel="stylesheet"
@@ -69,19 +69,25 @@
 
     <section class="welcome">
       <div class="haro">
-        <h1 class="text">W E L C O M E</h1>
-        <p class="welcome-text">
-          The oldest classical Greek and Latin writing had little or no space
-          between words and could be written in boustrophedon (alternating
-          directions). Over time, text direction (left to right) became
-          standardized, and word dividers and terminal punctuation became
-          common. The first way to divide sentences into groups was the original
-          parágraphos, similar to an underscore at the beginning of the new
-          group.[2] The Greek parágraphos evolved into the pilcrow (¶), which in
-          English manuscripts in the Middle Ages can be seen inserted inline
-          between sentences. The hedera leaf (e.g. ☙) has also been used in the
-          same way.
-        </p>
+        <div class="img-container">
+          <img class="img-main" src="undead esports.png" />
+        </div>
+        <div class="inner-text">
+          <h1 class="heading-hero">W E L C O M E</h1>
+
+          <p class="text-hero">
+            The oldest classical Greek and Latin writing had little or no space
+            between words and could be written in boustrophedon (alternating
+            directions). Over time, text direction (left to right) became
+            standardized, and word dividers and terminal punctuation became
+            common. The first way to divide sentences into groups was the
+            original parágraphos, similar to an underscore at the beginning of
+            the new group.[2] The Greek parágraphos evolved into the pilcrow
+            (¶), which in English manuscripts in the Middle Ages can be seen
+            inserted inline between sentences. The hedera leaf (e.g. ☙) has also
+            been used in the same way.
+          </p>
+        </div>
       </div>
     </section>
 
