--- a/index (2).html
+++ b/index (2).html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scrims.css" />
+    <!-- style css is overwritting troublesome styles -->
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
@@ -56,8 +58,12 @@
   <body>
     <header>
       <nav class="navbar">
-        <img class="logo" src="undead esports.png" />
-        <p class="logo-text-1">Undead <span>Esports</span></p>
+        <div class="logo-container">
+          <img class="logo" src="undead esports.png" />
+          <div class="logo-branding">
+            <span class="logo-text-1">Undead <span>Esports</span></span>
+          </div>
+        </div>
 
         <ul>
           <li><a class="nav-links nav-active" href="#">Home</a></li>
