added responsive navbar base styling and js

--- a/index.html
+++ b/index.html
@@ -65,11 +65,17 @@
           </div>
         </div>
 
-        <ul>
+        <ul class="navbar-ul hidden">
           <li><a class="nav-links nav-active" href="#">Home</a></li>
           <li><a class="nav-links nav-active" href="#">Registration</a></li>
           <li><a class="nav-links nav-active" href="#">Contact us </a></li>
         </ul>
+
+        <div class="burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
       </nav>
     </header>
     <main>
@@ -109,7 +115,9 @@
             <a href="#register">
               <button class="btn-cta-primary">For Paid Scrims</button>
             </a>
-            <button class="btn-cta-secondary">For Tournament</button>
+            <a href="#">
+              <button class="btn-cta-secondary">For Tournament</button>
+            </a>
           </div>
         </div>
       </div>
@@ -152,5 +160,6 @@
 
       typeWriter();
     </script>
+    <script src="main.js"></script>
   </body>
 </html>
