some small changes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-        <ul class="navbar-ul hidden">
+        <ul class="navbar-ul">
           <li><a class="nav-links nav-active" href="#">Home</a></li>
           <li><a class="nav-links nav-active" href="#">Registration</a></li>
           <li><a class="nav-links nav-active" href="#">Contact us </a></li>
