added parallax effect to hero section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="shortcut icon" href="undead esports.png" sizes="50x50" />
+    <link rel="shortcut icon" href="assets/undead esports.png" sizes="50x50" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="scrims.css" />
-    <!-- style css is overwritting troublesome styles -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/styles/scrims.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
@@ -59,7 +58,7 @@
     <header>
       <nav class="navbar">
         <div class="logo-container">
-          <img class="logo" src="undead esports.png" />
+          <img class="logo" src="assets/undead esports.png" />
           <div class="logo-branding">
             <span class="logo-text-1">Undead <span>Esports</span></span>
           </div>
@@ -98,7 +97,7 @@
             </p>
           </div>
           <div class="img-container">
-            <img class="img-main" src="undead esports.png" />
+            <img class="img-main" src="assets/undead esports.png" />
           </div>
         </div>
       </section>
@@ -160,6 +159,6 @@
 
       typeWriter();
     </script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
