--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </ul>
 
         <div class="burger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
+          <div class="line line1"></div>
+          <div class="line line2"></div>
+          <div class="line line3"></div>
         </div>
       </nav>
     </header>
